--- a/pastmovies.css
+++ b/pastmovies.css
@@ -29,6 +29,14 @@ h3{
     text-align:center;
 }
 
+.lg-view {
+    display:inline-block;
+}
+
+.sm-view{
+    display:none;
+}
+
 @media (max-width: 992px) {
   .resizedbox{
       position: relative;
@@ -52,15 +60,24 @@ h3{
     margin:2%;
   }
 
-td.imdb{
+  td.imdb{
     text-align:center;
-}
+  }
 
-td{
-  margin:80px;
-}
+  td{
+    margin:80px;
+  }
 
-h3{
+  h3{
     text-align:center;
-}
+  }
+
+  .lg-view{
+    display:none;
+  }
+
+  .sm-view{
+    display:inline-block;
+  }
+
 }
